2017-11-21  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Print attribute name and form in error
	message. If only the value cannot be retrieved/resolved don't abort.

2017-10-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (attr_callback): Print DIE offset in error messages.

2017-11-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_ops): Handle DW_OP_GNU_variable_value. Print
	referenced DIE as offset.

2017-09-10  Mark Wielaard  <mark@klomp.org>

	* ar.c (do_oper_delete): Remove DEBUG conditional check.
	(no0print): Return bool. Check snprintf return value.
	(do_oper_insert): Initialize elf. Remove DEBUG conditional check.
	Check no0print calls succeed. Explicitly elf_end found elfs.
	(do_oper_extract): Make sure we don't create an empty variable
	length array.

2017-09-01  Mark Wielaard  <mark@klomp.org>

	* stack.c (main): Replace \v in doc string with \n\n.
	* unstrip.c (main): Likewise.

2017-05-04  Ulf Hermann  <ulf.hermann@qt.io>

	* stack.c: Print pid_t using %lld.

2017-08-18  Ulf Hermann  <ulf.hermann@qt.io>

	* readelf.c: Hardcode the signal numbers for non-linux systems.

2017-07-26  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_macro_section): Accept either version 4 or
	version 5. Use DW_MACRO names instead of DW_MACRO_GNU names. Add
	minimal support for DW_MACRO_define_sup, DW_MACRO_undef_sup,
	DW_MACRO_import_sup, DW_MACRO_define_strx and DW_MACRO_undef_strx.

2017-07-26  Mark Wielaard  <mark@klomp.org>

	* readelf.c (dwarf_defaulted_string): New function.
	(dwarf_defaulted_name): Likewise.
	(attr_callback): Use dwarf_defaulted_name to get value of
	DW_AT_defaulted.

2017-07-20  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Deal with data marker symbols pointing to
	debug sections (they can be removed).

2017-07-14  Mark Wielaard  <mark@klomp.org>

	* strip (OPT_KEEP_SECTION): New define.
	(options): Add documentation for remove-section. Add keep-section.
	(struct section_pattern): New data type.